style: 전역 스타일 수정

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -15,6 +15,7 @@
   --text-primary-gray: #9ca3af;
   --text-secondary-gray: #e5e7eb;
   --text-primary-white: #ffffff;
+  --text-primary-blue: #3692ff;
 
   /* UI Element Colors */
   --input-background: #f9fafb;
