fix: Header컴포넌트 오류 수정

--- a/sprint8/styles/ui/Header.module.css
+++ b/sprint8/styles/ui/Header.module.css
@@ -38,7 +38,7 @@
   min-width: 27.1rem;
 }
 
-.headerTex {
+.headerText {
   font-weight: 700;
   font-size: 1.8rem;
   text-align: center;
@@ -108,7 +108,7 @@
 }
 
 @media (max-width: 600px) {
-  .headerTex {
+  .headerText {
     font-weight: 680;
     font-size: 18px;
   }
