style: 커뮤니티 피드 페이지 css 파일 수정

--- a/sprint8/styles/pages/CommunityFeed.module.css
+++ b/sprint8/styles/pages/CommunityFeed.module.css
@@ -8,8 +8,9 @@
 }
 
 .communityFeedMain{
-  width: 1200px;
+  width: 100%;
   height: 1013px;
+  margin: 94px auto 293px;
   margin-top: 94px;
   margin-bottom: 293px;
 }
