style: 커뮤니티 피드 스타일 조정

--- a/sprint8/styles/pages/CommunityFeed.module.css
+++ b/sprint8/styles/pages/CommunityFeed.module.css
@@ -23,6 +23,7 @@
 .articlePostHeader {
   display: flex;
   justify-content: space-between;
+  align-items: center;
   margin-bottom: 24px;
   margin-top: 40px;
 }
