--- a/sprint8/styles/pages/HomePage/Hero.css
+++ b/sprint8/styles/pages/HomePage/Hero.css
@@ -24,6 +24,9 @@
 }
 
 .skyColorContent .textBox .button {
+  color: #F9FAFB;
+  font-size: 2rem;
+  font-weight: 600;
   background-color: #3692FF;
   border-radius: 4rem;
   width: 35.7rem;
@@ -32,9 +35,22 @@
   justify-content: center;
   align-items: center;
   filter: drop-shadow(0 0 0.75rem rgba(0, 0, 0, 15%));
+
+  &:hover {
+    background-color: #3ee4d7;
+    transform: scale(1.1);
+    transition: background-color 0.3s ease-in-out, transform 0.3s ease;
+  }
+
+  ;
+
+  &:active {
+    background-color: #3ee4d6db;
+    transform: scale(1)
+  }
 }
 
-.skyColorContent .textBox .button a {
+/* .skyColorContent .textBox .button a {
   display: block;
   color: #F9FAFB;
   font-size: 2rem;
@@ -45,7 +61,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-}
+} */
 
 /* 태블릿 스타일 */
 @media (max-width: 750px) {
