--- a/sprint8/styles/pages/HomePage/Section1.css
+++ b/sprint8/styles/pages/HomePage/Section1.css
@@ -25,6 +25,11 @@
   .content1 .imgBox img {
     width: 100%;
     height: 100%;
+
+    &:hover {
+      transform: scale(1.1);
+      transition: background-color 0.3s ease-in-out, transform 0.3s ease;
+    }
   }
 
   .content1 .textBox .hotItem {
