--- a/sprint8/styles/pages/HomePage/Section2.css
+++ b/sprint8/styles/pages/HomePage/Section2.css
@@ -22,6 +22,11 @@
 .content2 .imgBox img {
   width: 100%;
   height: 100%;
+
+  &:hover {
+    transform: scale(1.1);
+    transition: background-color 0.3s ease-in-out, transform 0.3s ease;
+  }
 }
 
 .search {
@@ -95,5 +100,5 @@
 
   .content2 .imgBox {
     margin-left: 0rem;
-}
+  }
 }
