--- a/sprint8/styles/ui/Header.module.css
+++ b/sprint8/styles/ui/Header.module.css
@@ -45,6 +45,19 @@
   list-style-type: none;
   margin: 1.5rem 0;
   margin-right: 1.5rem;
+  color: #4B5563;
+
+  &:hover {
+    transform: scale(1.1);
+    transition: background-color 0.3s ease-in-out, transform 0.3s ease;
+    color: #000000fb;
+  }
+
+  ;
+
+  &:active {
+    transform: scale(1)
+  }
 }
 
 .headerTex>a {
@@ -67,10 +80,19 @@
   border-radius: 8px;
   padding: 11.5px 23px;
   filter: drop-shadow(0 0 0.75rem rgba(0, 0, 0, 15%));
-}
 
-.loginButtn:hover {
-  background-color: #3ee4d7;
+  &:hover {
+    background-color: #3ee4d7;
+    transform: scale(1.1);
+    transition: background-color 0.3s ease-in-out, transform 0.3s ease;
+  }
+
+  ;
+
+  &:active {
+    background-color: #3ee4d6db;
+    transform: scale(1)
+  }
 }
 
 @media (max-width: 1300px) {
