--- a/sprint8/styles/components/CommunityFeed/Articles.module.css
+++ b/sprint8/styles/components/CommunityFeed/Articles.module.css
@@ -14,6 +14,7 @@
   height: 138px;
   border-bottom: 1px solid #E5E7EB;
   padding: 10px 10px 0;
+  margin-bottom: 24px;
 
   &:hover {
     background-color: #00000005;
