style: global.css에 input, select에 대한 전역 스타일 추가

--- a/sprint8/styles/globals.css
+++ b/sprint8/styles/globals.css
@@ -45,3 +45,12 @@ button {
   cursor: pointer;
   border-style: none;
 }
+
+input {
+  border: none;
+}
+
+select {
+  cursor: pointer;
+  outline: none;
+}
