--- a/sprint8/styles/components/CommunityFeed/ArticleSearchInput.module.css
+++ b/sprint8/styles/components/CommunityFeed/ArticleSearchInput.module.css
@@ -1,6 +1,8 @@
 .articleSearchInput {
   width: 100%;
   height: 42px;
+  font-size: 16px;
+  font-weight: 400;
   padding: 9px 20px 9px 16px;
   border-radius: 12px;
   padding-left: 44px;
@@ -17,7 +19,7 @@
 
   ;
 
-  &:hover{
+  &:hover {
     box-shadow: 0 0 0.75rem rgba(0, 0, 0, 15%);
   }
 }
