style: Image 태그 fill 속성으로 대체, div 태그 생성

--- a/sprint8/styles/components/CommunityFeed/BestArticles.module.css
+++ b/sprint8/styles/components/CommunityFeed/BestArticles.module.css
@@ -75,6 +75,11 @@
   color: #4B5563;
 }
 
+.heartImage{
+  width: 12.75px;
+  height: 12px;
+}
+
 .articleLikeNum {
   font-size: 14px;
   font-weight: 400;
