--- a/sprint8/styles/pages/ArticleDetail.module.css
+++ b/sprint8/styles/pages/ArticleDetail.module.css
@@ -3,5 +3,6 @@
   height: 883px;
   margin-top: 110px;
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  align-items: center;
 }
