--- a/sprint8/styles/pages/ArticleDetail.module.css
+++ b/sprint8/styles/pages/ArticleDetail.module.css
@@ -1,8 +1,40 @@
-.ArticleDetailBox{
+.ArticleDetailBox {
   width: 100%;
   height: 883px;
   margin-top: 110px;
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+.toArticlePostButton {
+  font-size: 18px;
+  font-weight: 600;
+  color: #F3F4F6;
+  width: 240px;
+  height: 48px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 40px;
+  background-color: #3692FF;
+
+  &:hover {
+    background-color: #3ee4d7;
+    transform: scale(1.1);
+    transition: background-color 0.3s ease-in-out, transform 0.3s ease;
+  }
+
+  ;
+
+  &:active {
+    background-color: #3ee4d6db;
+    transform: scale(1)
+  }
+}
+
+.toArticlePostButtonImage{
+position: relative;
+top: 5px;
+margin-left: 8px;
 }
