--- a/sprint8/styles/pages/ArticleDetail.module.css
+++ b/sprint8/styles/pages/ArticleDetail.module.css
@@ -1,10 +1,11 @@
 .ArticleDetailBox {
   width: 100%;
   height: 883px;
-  margin-top: 110px;
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin-top: 110px;
+  margin-bottom: 463px;
 }
 
 .toArticlePostButton {
