--- a/sprint8/styles/globals.css
+++ b/sprint8/styles/globals.css
@@ -27,13 +27,18 @@ html {
   font-style: normal;
 }
 
-main {
+body {
   width: 100%;
   height: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+}
+
+#__next {
+  width: 100%;
+  height: 100%;
 }
 
 a {
