style: 폰트 설정, import 및 css 수정

--- a/sprint8/styles/pages/HomePage/common.css
+++ b/sprint8/styles/pages/HomePage/common.css
@@ -69,6 +69,11 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    /* align-items: center; */
   }
+}
+
+@media (max-width: 486px) {
+  .whiteColorSection .textBox {
+    margin-left: 0px;
+}
 }
