--- a/sprint8/styles/globals.css
+++ b/sprint8/styles/globals.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Pretendard&display=swap');
+
 :root {
   /* Gray scale */
   --gray-900: #1b1d1f;
@@ -23,7 +25,7 @@
 
 html {
   font-size: 10px;
-  font-family: 'Pretendard-Regular';
+  font-family: 'Pretendard', sans-serif;
   font-style: normal;
 }
 
