style: 스타일 수정
justify-content나 align-items에 start 값 넣을 때
그냥 start가 아닌 flex-start로 하는 것을 권장함

--- a/sprint8/styles/ui/Header.module.css
+++ b/sprint8/styles/ui/Header.module.css
@@ -135,7 +135,7 @@
   }
 
   .headerTextBox {
-    justify-content: start;
+    justify-content: flex-start;
     position: absolute;
     left: 15rem;
     bottom: 6px;
@@ -189,7 +189,7 @@
     width: 11.3rem;
     height: 4.1rem;
     display: flex;
-    justify-content: start;
+    justify-content: flex-start;
     align-items: center;
   }
 
