style: 스타일 수정

--- a/sprint8/styles/pages/ArticlePost.module.css
+++ b/sprint8/styles/pages/ArticlePost.module.css
@@ -118,6 +118,7 @@
   height: 282px;
   font-size: 16px;
   font-weight: 500;
+  line-height: 30px;
   margin-top: 12px;
   outline: none;
   resize: none;
