--- a/components/Article.module.css
+++ b/components/Article.module.css
@@ -5,6 +5,16 @@
   border-bottom: 1px solid #e5e7eb;
   margin-bottom: 24px;
   position: relative;
+  padding: 12px 24px 0;
+}
+
+.article:hover {
+  background: #f9fafb;
+}
+
+.article:hover {
+  background: linear-gradient(135deg, #ffffff, #f3f4f6);
+  /* box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.1); */
 }
 
 .title {
@@ -55,7 +65,9 @@
 
 .likeBox {
   position: absolute;
-  right: 5px;
+  /* right: 5px;
+  bottom: 25px; */
+  right: 12px;
   bottom: 25px;
   display: flex;
   align-items: center;
