--- a/styles/Community.module.css
+++ b/styles/Community.module.css
@@ -1,30 +1,3 @@
-.main {
-  /* padding: 26px 200px; */
-  padding: 26px 0;
-  color: #111827;
-  min-height: calc(100vh - 230px);
-}
-
-.container {
-  margin: 0 auto;
-
-  /* PC 스타일: 1200px 이상 */
-  @media (min-width: 1200px) {
-    width: 1118px;
-  }
-
-  /* Tablet 스타일: 744px 이상 ~ 1199px 이하 */
-  @media (min-width: 744px) and (max-width: 1199.98px) {
-    width: 696px;
-  }
-
-  /* Mobile 스타일: 375px 이상 ~ 743px 이하 */
-  @media (min-width: 375px) and (max-width: 743.98px) {
-    width: 100%;
-    max-width: 344px;
-  }
-}
-
 .title {
   white-space: nowrap;
   font-weight: 700;
@@ -104,6 +77,7 @@
   right: 13px;
   top: 45%;
   transform: translateY(-50%);
+  cursor: pointer;
 }
 
 .select {
