style: totle 버튼 스타일 추가

--- a/sprint8/styles/components/ArticleDetail/ArticleInfo.module.css
+++ b/sprint8/styles/components/ArticleDetail/ArticleInfo.module.css
@@ -27,14 +27,13 @@
   cursor: pointer;
 
   &:hover {
-    box-shadow: 0 0 0.75rem rgba(0, 0, 0, 15%);
     filter: drop-shadow(0 0 0.75rem rgba(0, 0, 0, 15%));
   }
 
   ;
 
   &:active {
-    background-color: #f9fafb17;
+    filter: drop-shadow(0 0 0.75rem rgba(0, 0, 0, 15%));
     transform: scale(1.1)
   }
 }
