style: 스타일 수정
-main-color로 지정돼 있지 않은 모든 색 변수로 지정
-현재 경로에 따라 header 글씨 색 바뀌지 않는 것 수정

--- a/sprint8/styles/pages/ArticlePost.module.css
+++ b/sprint8/styles/pages/ArticlePost.module.css
@@ -39,7 +39,7 @@
 }
 
 .postBouttonBlue{
-  background-color: #3692FF;
+  background-color: var(--mainColor);
   filter: drop-shadow(0 0 0.75rem rgba(0, 0, 0, 15%));
 
   &:hover {
