--- a/sprint8/styles/pages/ArticleDetail.module.css
+++ b/sprint8/styles/pages/ArticleDetail.module.css
@@ -19,7 +19,7 @@
   align-items: center;
   margin-top: 64px;
   border-radius: 40px;
-  background-color: #3692FF;
+  background-color: var(--mainColor);
 
   &:hover {
     background-color: #3ee4d7;
