--- a/sprint8/styles/pages/HomePage/Hero.css
+++ b/sprint8/styles/pages/HomePage/Hero.css
@@ -27,7 +27,7 @@
   color: #F9FAFB;
   font-size: 2rem;
   font-weight: 600;
-  background-color: #3692FF;
+  background-color: var(--mainColor);
   border-radius: 4rem;
   width: 35.7rem;
   height: 5.6rem;
