--- a/sprint8/styles/pages/HomePage/Section1.css
+++ b/sprint8/styles/pages/HomePage/Section1.css
@@ -33,7 +33,7 @@
   .content1 .textBox .hotItem {
     width: 8.2rem;
     height: 2.6rem;
-    color: #3692FF;
+    color: var(--mainColor);
     font-weight: 700;
     font-size: 1.8rem;
   }
