--- a/sprint8/styles/pages/HomePage/Section2.css
+++ b/sprint8/styles/pages/HomePage/Section2.css
@@ -36,7 +36,7 @@
   font-weight: 700;
   line-height: 2.6rem;
   text-align: left;
-  color: #3692FF;
+  color: var(--mainColor);
 }
 
 .content2 .textBox {
