--- a/panda-market/src/styles/Header.module.css
+++ b/panda-market/src/styles/Header.module.css
@@ -1,11 +1,16 @@
+
+@font-face {
+  font-family:'ROKAF';
+  src: url("/fonts/ROKAFSansBold") format("truetype");
+}
+
+
+
 .header {
-  width: 1920px;
+  width: 100%;
   height: 70px;
   background-color: #fff;
   border-bottom: 1px solid #DFDFDF;
-  padding: 10px 20px;
-  position: sticky;
-  top: 0;
   z-index: 1000;
 }
 
@@ -14,7 +19,8 @@
   justify-content: space-between;
   align-items: center;
   max-width: 1200px;
-  margin: 0 auto;
+  margin: auto;
+  height: 100%;
 }
 
 .logo {
@@ -24,35 +30,49 @@
 }
 
 .logoText {
-  font-size: 18px;
+  font-family:'ROKAF';
+  font-weight: 700;
+  font-size: 25.63px;
+  line-height: 34.6px;
   font-weight: bold;
-  color: #007bff;
+  color: #3692FF;
 }
 
 .nav {
   display: flex;
-  gap: 20px;
+  gap: 39px;
+  margin-right: 700px;
 }
 
 .navLink {
+  font-family: 'Pretendard';
   text-decoration: none;
-  font-size: 16px;
-  color: #555;
+  font-size: 18px;
+  line-height: 21.48px;
+  font-weight: 700;
+  color: #4B5563;
 }
 
 .navLink:hover {
-  color: #007bff;
-  text-decoration: underline;
+  color: #3692FF;
+  text-decoration: none;
 }
 
 .loginButton {
+  width: 88px;
+  height: 42px;
+  font-family: 'Pretendard';
   background-color: #007bff;
   color: #fff;
-  padding: 8px 15px;
   border-radius: 5px;
   text-decoration: none;
-  font-size: 14px;
+  text-align: center;
+  font-size: 16px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
+
 
 .loginButton:hover {
   background-color: #0056b3;
