feat: 자유게시판 게시글 페이지

--- a/next_sprint/styles/globals.css
+++ b/next_sprint/styles/globals.css
@@ -2,20 +2,20 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+.social_box {
+  @apply w-5 h-5 flex items-center;
 }
 
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+.social_box img {
+  @apply w-full object-contain;
+}
+
+html {
+  @apply font-sans;
 }
