--- a/components/Comment.module.css
+++ b/components/Comment.module.css
@@ -1,22 +1,23 @@
 .comment {
   width: 100%;
-  height: 104px;
+  min-height: 104px;
+  height: auto;
   border-bottom: 1px solid #e5e7eb;
   margin-bottom: 24px;
   position: relative;
 }
 
 .content {
+  display: block;
   font-weight: 400;
   font-size: 1.4rem;
   line-height: 32px;
-  margin-bottom: 16px;
 }
 
 .infoBox {
-  height: 40px;
   display: flex;
   gap: 8px;
+  padding: 16px 0 21px;
 }
 
 .userImg {
@@ -39,26 +40,111 @@
   color: #9ca3af;
 }
 
-/* 메뉴 오버레이 */
-.overlay {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: transparent;
-  z-index: 2;
-}
-
 /* 옵션 버튼 */
 .optionButton {
   width: 24px;
   height: 24px;
   cursor: pointer;
   position: absolute;
-  right: 20px;
-  top: 50%;
-  transform: translateY(-50%);
-  background: url("/public/img/ic_kebab.png") no-repeat center / 24px 24px;
+  top: 0;
+  right: 5px;
+  background: url("/ic_kebab.png") no-repeat center / 24px 24px;
   z-index: 3; /* 메뉴 위에 버튼 위치 */
+}
+
+.menu {
+  width: 139px;
+  height: 92px;
+  position: absolute;
+  top: 20px;
+  right: 20px;
+  background-color: #ffffff;
+  color: #6b7280;
+  border-radius: 8px;
+  z-index: 4;
+  display: flex;
+  flex-direction: column;
+}
+
+.menu p {
+  width: 100%;
+  height: 46px;
+  line-height: 46px;
+  font-size: 1.6rem;
+  text-align: center;
+  background-color: #ffffff;
+  cursor: pointer;
+  border: 1px solid #d1d5db;
+}
+
+.menu p:nth-child(1) {
+  border-radius: 8px 8px 0 0;
+  border-bottom: none;
+}
+
+.menu p:nth-child(2) {
+  border-radius: 0 0 8px 8px;
+}
+
+.menu p:hover {
+  background-color: #f3f4f6;
+}
+
+/* 수정모드 */
+.editMode {
+  display: block;
+}
+
+.modifyInput {
+  width: 100%;
+  height: 80px;
+  border-radius: 12px;
+  background: #f3f4f6;
+  border: none;
+  font-size: 1.4rem;
+  padding: 16px 24px;
+  resize: none;
+}
+
+.modifyInput:focus {
+  outline: none;
+  padding: 14px 22px;
+  border: 2px solid #3692ff;
+}
+
+.buttonContainer {
+  width: 179px;
+  display: flex;
+  gap: 5px;
+  margin-top: 13px;
+  position: absolute;
+  right: 0;
+}
+
+.cancelButton {
+  width: 68px;
+  height: 42px;
+  line-height: 42px;
+  text-align: center;
+  font-weight: 600;
+  color: #737373;
+  border-radius: 8px;
+  font-size: 1.6rem;
+  border: none;
+  cursor: pointer;
+  background: #f3f4f6;
+}
+
+.submitButton {
+  width: 106px;
+  height: 42px;
+  line-height: 42px;
+  text-align: center;
+  font-weight: 600;
+  color: #f3f4f6;
+  background-color: #3692ff;
+  border-radius: 8px;
+  font-size: 1.6rem;
+  border: none;
+  cursor: pointer;
 }
