--- a/components/CommentForm.module.css
+++ b/components/CommentForm.module.css
@@ -1,3 +1,11 @@
+.title {
+  font-weight: 600;
+  font-size: 1.6rem;
+  line-height: 2.6rem;
+  color: #111827;
+  margin-bottom: 9px;
+}
+
 .commentInput {
   width: 100%;
   height: 104px;
