--- a/next/app/globals.css
+++ b/next/app/globals.css
@@ -28,6 +28,9 @@ button {
   background: transparent;
   border: 0;
 }
+img {
+  width: 100%;
+}
 
 /* color */
 :root {
@@ -51,10 +54,10 @@ button {
 header {
   width: 100%;
   height: 70px;
-  position: fixed;
+  /* position: fixed; */
   top: 0;
-  left: 50%;
-  transform: translateX(-50%);
+  /* left: 50%; */
+  /* transform: translateX(-50%); */
   border-bottom: 1px solid #dfdfdf;
   z-index: 999;
   background: #fff;
@@ -379,4 +382,47 @@ footer .content .icon img {
   .marketSection ul li:nth-of-type(2n) {
     margin-right: 0;
   }
+}
+
+
+.inputBox {
+  margin-bottom: 32px;
+}
+.inputBox label {
+  display: block;
+  width: 100%;
+  font-size: 18px;
+  line-height: 26px;
+  font-weight: 700;
+  color: #1f2937;
+  margin-bottom: 16px;
+}
+
+.inputBox .cover {
+  border-radius: 12px;
+  height: 56px;
+  background: #f3f4f6;
+  padding-left: 24px;
+  position: relative;
+}
+.inputBox .cover.covertxt {
+  height: auto;
+}
+.inputBox .cover input {
+  width: 100%;
+  height: 100%;
+  font-size: 16px;
+  border: 0;
+  outline: none;
+  background-color: transparent;
+}
+.inputBox textarea {
+  resize: none;
+  outline: none;
+  background: #f3f4f6;
+  border-radius: 12px;
+  border: 0;
+  padding-top: 16px;
+  font-size: 16px;
+  margin-bottom: 16px;
 }
