--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -60,3 +60,25 @@ body {
     text-wrap: balance;
   }
 }
+
+@layer components {
+  .input-section {
+    @apply flex flex-col gap-4 mb-8;
+  }
+
+  .input-base {
+    @apply bg-bg-input px-6 py-4 rounded-[12px];
+  }
+
+  .input-label {
+    @apply text-[18px] font-bold;
+  }
+
+  .error-message {
+    @apply text-text-red font-semibold text-[14px];
+  }
+
+  .error-input {
+    @apply border border-border-input-error;
+  }
+}
