style: global css 수정

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -72,7 +72,7 @@ body {
   }
 
   .input-label {
-    @apply text-[18px] font-bold;
+    @apply text-[16px] md:text-[18px] xl:text-[18px] font-bold;
   }
 
   .error-message {
