--- a/next/app/globals.css
+++ b/next/app/globals.css
@@ -1,10 +1,11 @@
 @font-face {
-  font-family: "Pretendard";
+  font-family: 'Pretendard';
   font-weight: 400;
   font-display: swap;
-  src: local("Pretendard Regular"),
-    url(./font/Pretendard-Regular.woff2) format("woff2"),
-    url(./font/Pretendard-Regular.woff) format("woff");
+  src:
+    local('Pretendard Regular'),
+    url(./font/Pretendard-Regular.woff2) format('woff2'),
+    url(./font/Pretendard-Regular.woff) format('woff');
 }
 /* reset */
 * {
@@ -12,7 +13,7 @@
   margin: 0;
   line-height: 150%;
   box-sizing: border-box;
-  font-family: "Pretendard";
+  font-family: 'Pretendard';
 }
 a {
   text-decoration: none;
@@ -50,7 +51,12 @@ img {
   --gray100: #f3f4f6;
   --gray50: #f9fafb;
 }
-
+.bgPrimary100 {
+  background-color: var(--primary100) !important;
+}
+.bgPrimary200 {
+  background-color: var(--primary200) !important;
+}
 header {
   width: 100%;
   height: 70px;
@@ -383,7 +389,6 @@ footer .content .icon img {
     margin-right: 0;
   }
 }
-
 
 .inputBox {
   margin-bottom: 32px;
