로그인/회원가입 구글카카오 링크 첨부

--- a/panda-market/src/styles/Login.module.css
+++ b/panda-market/src/styles/Login.module.css
@@ -60,7 +60,7 @@
 .input {
   width: 640px;
   height: 56px;
-  border: 1px solid #ddd;
+  border: none;
   border-radius: 12px;
   font-size: 16px;
   background-color: #F3F4F6;
@@ -113,16 +113,27 @@
 }
  
 
-
 .icons {
+  position: relative;
   width: 42px;
   height: 42px;
   cursor: pointer;
   display: flex;
-  margin-right: 60px;
   gap: 10px;
-  margin-top: 16px;
+  margin-top: 8px;
+  right: 40px;
 }
+
+.googlekakao {
+  position: absolute;
+  width: 42px;
+  height: 42px;
+  cursor: pointer;
+  display: flex;
+  gap: 10px;
+  margin-top: 5px;
+}
+
 
 .text {
   font-size: 14px;
