--- a/css/register.module.css
+++ b/css/register.module.css
@@ -52,6 +52,7 @@
 .PwInputRegisterMain {
     margin-top: 24px;
     text-align: left;
+    position: relative;
 }
 
 .PwInputRegisterTitle {
@@ -61,13 +62,14 @@
 }
 
 .PwInputRegisterArea {
-    width: 630px;
+    width: 680px;
     background-color: #F3F4F6;
     border: none;
     padding: 16px 24px;
     border-radius: 12px;
     margin-top: 16px;
     outline: none;
+    box-sizing: border-box;
 }
 
 .RegisterButton {
@@ -83,6 +85,7 @@
     margin-top: 24px;
     color: white;
     background-color: #9CA3AF;
+    cursor: pointer;
 }
 
 .inputErr {
@@ -92,4 +95,19 @@
     text-align: left;
     color: red;
     display: none;
+}
+
+.passwordTypeChange {
+    width: 24px;
+    height: 24px;
+    position: absolute;
+    right: -20px;
+    top: 12px;
+}
+
+.passwordicon {
+    width: 24px;
+    height: 24px;
+    margin-top: 45px;
+    cursor: pointer;
 }
