--- a/components/articleDetail/ArticleDetail.module.css
+++ b/components/articleDetail/ArticleDetail.module.css
@@ -77,3 +77,10 @@
   width: 32px;
   height: 32px;
 }
+
+.likeCount {
+  font-size: 16px;
+  line-height: 26px;
+  font-weight: 500;
+  color: #6b7280;
+}
