--- a/panda-market/src/styles/Signup.module.css
+++ b/panda-market/src/styles/Signup.module.css
@@ -105,6 +105,7 @@
   margin-top: 24px;
 }
  
+ 
 .icons {
   position: relative;
   width: 42px;
@@ -112,8 +113,8 @@
   cursor: pointer;
   display: flex;
   gap: 10px;
-  margin-top: 5px;
-  right: 120px;
+  margin-top: 8px;
+  right: 40px;
 }
 
 .googlekakao {
@@ -123,9 +124,8 @@
   cursor: pointer;
   display: flex;
   gap: 10px;
-  margin-top: 8px; 
+  margin-top: 5px;
 }
-
 
 .p {
   font-size: 14px;
@@ -178,4 +178,33 @@
 
 .text a:hover {
   text-decoration: underline;
+}
+
+
+/* 모달 */
+
+.error {
+  color: red;
+  font-size: 0.875rem;
+  margin-top: 5px;
+}
+
+.modal {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background: white;
+  padding: 20px;
+  border: 1px solid #ccc;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.modalButton {
+  margin-top: 10px;
+  background-color: #007bff;
+  color: white;
+  border: none;
+  padding: 10px 20px;
+  cursor: pointer;
 }
