--- a/panda-market/src/styles/globals.css
+++ b/panda-market/src/styles/globals.css
@@ -3,6 +3,7 @@ body {
   padding: 0;
   font-family: Pretendard, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;
   background-color: #f9f9f9;
+  justify-content: center;
 }
 
 a {
